--- a/code_05.ipynb
+++ b/code_05.ipynb
@@ -19,8 +19,8 @@
    "source": [
     "import os\n",
     "\n",
-    "os.environ['KAGGLE_USERNAME'] = '' # username\n",
-    "os.environ['KAGGLE_KEY'] = '' # key"
+    "os.environ['KAGGLE_USERNAME'] = 'mavischong' # username\n",
+    "os.environ['KAGGLE_KEY'] = '19c11db6061fb9952a5984328d98f735' # key"
    ]
   },
   {
