upload datset backup

--- a/code_05.ipynb
+++ b/code_05.ipynb
@@ -6,7 +6,9 @@
     "id": "fatzWQFfr2a9"
    },
    "source": [
-    "# Importing Dataset / Libraries"
+    "# Importing Dataset / Libraries\n",
+    "\n",
+    "#### Skip first 3 Cells if dataset is downloaded already "
    ]
   },
   {
@@ -18,7 +20,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "# credentials retrieved from Kaggle API ket token for account \n",
+    "\n",
     "os.environ['KAGGLE_USERNAME'] = '' # username\n",
     "os.environ['KAGGLE_KEY'] = '' # key"
    ]
@@ -68,6 +70,13 @@
    ],
    "source": [
     "!unzip -q fraudulent-claim-on-cars-physical-damage.zip"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Start from here if dataset is downloaded already"
    ]
   },
   {
