--- a/code_05.ipynb
+++ b/code_05.ipynb
@@ -6,9 +6,7 @@
     "id": "fatzWQFfr2a9"
    },
    "source": [
-    "# Importing Dataset / Libraries\n",
-    "\n",
-    "#### Skip first 3 Cells if dataset is downloaded already "
+    "# Importing Dataset / Libraries"
    ]
   },
   {
